--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -114,7 +114,7 @@
                 </div>
                 <div class="-mt-[2px] flex items-center justify-center text-xs text-orange-200">
                   Unregistered
-                  <i class="fa fa-circle-info pl-2 text-lg text-white"></i>
+                  <i id="monthlyInfo" class="fa fa-circle-info pl-2 text-lg text-white"></i>
                 </div>
               </div>
             </div>
@@ -193,7 +193,7 @@
                 </div>
                 <span class="flex items-center justify-center text-xs text-orange-200">
                   Unregistered
-                  <i class="fa fa-circle-info pl-2 text-lg text-white"></i>
+                  <i id="monthlyInfoMobile" class="fa fa-circle-info pl-2 text-lg text-white"></i>
                 </span>
               </div>
             </div>
