feat: monthly status - customer side

--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -113,7 +113,7 @@
                   <span class="text-sm font-medium">Monthly Pass Status</span>
                 </div>
                 <div class="-mt-[2px] flex items-center justify-center text-xs text-orange-200">
-                  Unregistered
+                  Fetching
                   <i id="monthlyInfo" class="fa fa-circle-info pl-2 text-lg text-white"></i>
                 </div>
               </div>
@@ -192,7 +192,7 @@
                   <span class="text-sm font-medium">Monthly Pass Status</span>
                 </div>
                 <span class="flex items-center justify-center text-xs text-orange-200">
-                  Unregistered
+                  Fetching
                   <i id="monthlyInfoMobile" class="fa fa-circle-info pl-2 text-lg text-white"></i>
                 </span>
               </div>
