--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -110,7 +110,7 @@
               <div class="text-center">
                 <div class="mt-[5px] flex items-center space-x-2">
                   <span class="font-bold text-orange-300">🎫</span>
-                  <span class="text-sm font-medium">Monthly Pass Status</span>
+                  <span class="text-sm font-medium">Monthly Pass</span>
                 </div>
                 <div class="-mt-[2px] flex items-center justify-center text-xs text-orange-200">
                   Fetching
@@ -189,7 +189,7 @@
               <div class="flex items-center justify-between">
                 <div class="flex items-center space-x-3">
                   <span class="font-bold text-orange-300">🎫</span>
-                  <span class="text-sm font-medium">Monthly Pass Status</span>
+                  <span class="text-sm font-medium">Monthly Pass</span>
                 </div>
                 <span class="flex items-center justify-center text-xs text-orange-200">
                   Fetching
