fix: update customer admin side

--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -215,9 +215,9 @@
           data-listemptytexts="No registered customers yet::No active monthly customers yet::No past monthly customers yet::No archived customers yet"
           data-listtitletexts="[Customer ID//Customer//Customer Type//Price Rate//Date Registered]::[Customer ID//Customer//Start Date//End Date//Days Left//Amount Paid//Price Rate//Log Date & Time]::[Customer ID//Customer//Start Date//End Date//Amount Paid//Price Rate//Log Date & Time]::[Customer ID//Customer//Log Date & Time]"
           data-listdatasortby="[name//name//name//name//date]::[name//name//date//date//number//number//name//date]::[name//name//date//date//number//name//date]::[name//name//date]"
-          data-listitembtnids="[customerProcessBtn//customerEditDetailsBtn]::[customerProcessBtn//customerEditDetailsBtn]::[customerDetailsBtn]::[customerDetailsBtn]"
-          data-listitembtntexts="[Process [-🎫-]//Edit Details [-⚙️-]]::[Process [-🎫-]//Edit Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
-          data-listitembtncolors="[blue//orange]::[blue//orange]::[blue]::[blue]"
+          data-listitembtnids="[customerProcessBtn//customerEditDetailsBtn]::[customerProcessBtn]::[customerDetailsBtn]::[customerDetailsBtn]"
+          data-listitembtntexts="[Process [-🎫-]//Edit Details [-⚙️-]]::[Process [-🎫-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
+          data-listitembtncolors="[blue//orange]::[blue]::[blue]::[blue]"
         ></div>
       </section>
 
