fix: grand total in export data

--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -393,13 +393,13 @@
       <section
         id="maintenance-accesscontrol-section"
         data-icons="fa-broom::fa-server"
-        data-sectiontexts="Maintenance::Admin Console"
+        data-sectiontexts="Maintenance::Access Control"
         data-color="violet-fuchsia-red"
         class="section"
       >
         <div
           id="section-header"
-          data-title="Administration Console"
+          data-title="Access Control"
           data-subtitle="User & System Management"
           data-mainbtntext="Create System User [-🔧-]"
           data-middletext="<div id='liveDate'></div>"
@@ -424,13 +424,13 @@
       <section
         id="maintenance-datacontrol-section"
         data-icons="fa-broom::fa-file-circle-question"
-        data-sectiontexts="Maintenance::Export Data"
+        data-sectiontexts="Maintenance::Data Control"
         data-color="violet-fuchsia-red"
         class="section"
       >
         <div
           id="section-header"
-          data-title="Export Data"
+          data-title="Data Control"
           data-middletext="<div id='liveDate'></div>"
           data-subtitle="System Data Exporter"
           data-mainbtntext="Export to PDF [-📄-]"
