fix: remove Lets Go Button

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </button>
 
             <!-- login dropdown -->
-            <div class="relative inline-block text-left">
+            <!-- <div class="relative inline-block text-left">
               <div
                 class="flex items-center overflow-hidden rounded-xl shadow-lg"
               >
@@ -151,12 +151,12 @@
                       fill="#000"
                       d="M20.63 32.078c-3.16-.332-5.628-1.881-5.767-1.97a1 1 0 0 1 1.075-1.687c.04.025 4.003 2.492 7.846 1.467c2.125-.566 3.867-2.115 5.177-4.601a1 1 0 0 1 1.77.932c-1.585 3.006-3.754 4.893-6.447 5.606c-1.257.332-2.502.374-3.654.253"
                     />
-                  </svg>
+                  </svg> -->
                   <!-- 🔑 CLIENT (in case client doesn't like this) -->
-                  Let's Go
-                </a>
+                  <!-- Let's Go -->
+                <!-- </a>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
 
@@ -213,21 +213,21 @@
         </div>
 
         <!-- mobile view: login dropdown options -->
-        <div id="mobile-menu" class="mt-6 hidden space-y-3 lg:hidden">
+        <!-- <div id="mobile-menu" class="mt-6 hidden space-y-3 lg:hidden">
           <a
             href="/login"
             class="block w-full rounded-xl bg-gradient-to-r from-yellow-500 to-orange-600 px-6 py-3 text-center font-bold text-white shadow-lg"
-          >
+          > -->
             <!-- 🔑 CLIENT -->
-            💪 Let's Go!
-          </a>
+            <!-- 💪 Let's Go! -->
+          <!-- </a> -->
           <!-- <button
             id="mobile-admin-login-btn"
             class="flex w-full items-center justify-center gap-2 rounded-xl bg-gradient-to-r from-orange-500 to-red-500 px-6 py-3 font-bold text-white shadow-lg"
           >
             🔒 Staff Only
           </button> -->
-        </div>
+        <!-- </div> -->
       </div>
     </nav>
 
