--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -560,25 +560,25 @@
 
     <!-- Equipment Status (inserted before footer) -->
     <div class="relative">
-      <div class="absolute inset-0 bg-orange-100 opacity-100 transition-opacity duration-300 dark:opacity-0"></div>
-      <div class="bg-dark-900 absolute inset-0 opacity-0 transition-opacity duration-300 dark:opacity-100"></div>
-      <section class="relative z-10 w-full px-0 py-12">
+      <div class="absolute inset-0 bg-orange-50 opacity-100 transition-opacity duration-300 dark:opacity-0"></div>
+      <div class="bg-gray-900 absolute inset-0 opacity-0 transition-opacity duration-300 dark:opacity-100"></div>
+      <section class="relative z-10 w-full px-6 py-12 sm:px-8 lg:px-12 xl:px-16">
 
-        <h2 class="mb-6 bg-gradient-to-r from-orange-300 to-red-600 bg-clip-text text-center text-2xl font-black text-transparent">
+        <h2 class="mb-8 bg-gradient-to-r from-orange-500 to-orange-600 bg-clip-text text-center text-3xl font-black text-transparent">
           Equipment Status
         </h2>
 
-        <div id="equipment-filters" class="mb-4 flex flex-wrap items-center justify-center gap-2">
+        <div id="equipment-filters" class="mb-6 flex flex-wrap items-center justify-center gap-3">
           <button type="button" data-filter="all"
-            class="px-3 py-1.5 text-sm rounded-lg border border-orange-300 bg-orange-600 text-white">
+            class="px-4 py-2 text-sm font-medium rounded-lg border-2 border-orange-500 bg-orange-600 text-white hover:bg-orange-700 transition-colors shadow-sm">
             All
           </button>
           <button type="button" data-filter="machine"
-            class="px-3 py-1.5 text-sm rounded-lg border border-orange-300 bg-white text-orange-700">
+            class="px-4 py-2 text-sm font-medium rounded-lg border-2 border-orange-500 bg-white text-orange-600 hover:bg-orange-50 transition-colors shadow-sm">
             Machine
           </button>
           <button type="button" data-filter="non-machine"
-            class="px-3 py-1.5 text-sm rounded-lg border border-orange-300 bg-white text-orange-700">
+            class="px-4 py-2 text-sm font-medium rounded-lg border-2 border-orange-500 bg-white text-orange-600 hover:bg-orange-50 transition-colors shadow-sm">
             Non-Machine
           </button>
         </div>
