--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -453,69 +453,42 @@
                 <!-- Quick Booking Tip -->
                 <div class="rounded-md border border-orange-200 bg-orange-50 p-3 text-xs text-orange-900">
                   <p class="mb-1 font-semibold">Quick Reservation Tip!</p>
-                  <p class="mb-2">
-                    We leave a small gap between reservations to prepare for each customer. Here's how it works:
-                  </p>
+                  <p class="mb-2">Reservations are now in fixed 1-hour blocks. Choose a time slot that works for you.</p>
                   <ul class="list-disc space-y-1 pl-4 text-xs">
-                    <li>If someone books until 2:00 PM</li>
-                    <li>Your appointment can start at 2:01 PM</li>
+                    <li>Operating hours: 9:00 AM – 11:59 PM</li>
+                    <li>Each booking reserves a 1-hour slot (e.g., 10:00–11:00)</li>
                   </ul>
-                  <p class="mt-2 text-xs">Check our live calendar to see all available time slots!</p>
+                  <p class="mt-2 text-xs">Check our live calendar to see availability.</p>
                 </div>
 
-                <!-- Duration -->
+                <!-- Time Slot (fixed 1 hour) -->
                 <div>
-                  <label for="duration" class="mb-1 block text-xs font-semibold text-gray-700">Duration</label>
+                  <label for="timeSlot" class="mb-1 block text-xs font-semibold text-gray-700">Time Slot (1 hour)</label>
                   <select
-                    id="duration"
-                    name="duration"
+                    id="timeSlot"
+                    name="timeSlot"
                     class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-orange-400"
                     required
                   >
-                    <option value="">Select duration</option>
-                    <option value="1">1 hour</option>
-                    <option value="2">2 hours</option>
-                    <option value="3">3 hours</option>
-                    <option value="4">4 hours</option>
-                    <option value="5">5 hours</option>
-                    <option value="6">6 hours</option>
-                    <option value="7">7 hours</option>
+                    <option value="">Select time slot</option>
+                    <option value="09:00-10:00">9:00 AM - 10:00 AM</option>
+                    <option value="10:00-11:00">10:00 AM - 11:00 AM</option>
+                    <option value="11:00-12:00">11:00 AM - 12:00 PM</option>
+                    <option value="12:00-13:00">12:00 PM - 1:00 PM</option>
+                    <option value="13:00-14:00">1:00 PM - 2:00 PM</option>
+                    <option value="14:00-15:00">2:00 PM - 3:00 PM</option>
+                    <option value="15:00-16:00">3:00 PM - 4:00 PM</option>
+                    <option value="16:00-17:00">4:00 PM - 5:00 PM</option>
+                    <option value="17:00-18:00">5:00 PM - 6:00 PM</option>
+                    <option value="18:00-19:00">6:00 PM - 7:00 PM</option>
+                    <option value="19:00-20:00">7:00 PM - 8:00 PM</option>
+                    <option value="20:00-21:00">8:00 PM - 9:00 PM</option>
+                    <option value="21:00-22:00">9:00 PM - 10:00 PM</option>
+                    <option value="22:00-23:00">10:00 PM - 11:00 PM</option>
                   </select>
                 </div>
                 <p id="timeError" class="hidden text-xs text-red-600" aria-live="polite"></p>
 
-                <!-- Time inputs in grid for mobile -->
-                <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
-                  <!-- Start Time -->
-                  <div>
-                    <label for="startTime" class="mb-1 block text-xs font-semibold text-gray-700">Start Time</label>
-                    <input
-                      id="startTime"
-                      name="startTime"
-                      type="time"
-                      min="09:00"
-                      max="23:00"
-                      class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-orange-400"
-                      required
-                    />
-                    <p class="mt-1 text-xs text-gray-500">Gym opens at 9:00 AM</p>
-                  </div>
-
-                  <!-- End Time -->
-                  <div>
-                    <label for="endTime" class="mb-1 block text-xs font-semibold text-gray-700">End Time</label>
-                    <input
-                      id="endTime"
-                      name="endTime"
-                      type="time"
-                      min="09:00"
-                      max="23:00"
-                      class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-orange-400"
-                      disabled
-                    />
-                    <p class="mt-1 text-xs text-gray-500">Last session ends at 11:59 PM</p>
-                  </div>
-                </div>
                 <!-- Select Date -->
                 <div>
                   <label for="bookingDate" class="mb-1 block text-xs font-semibold text-gray-700">Select Date</label>
