--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -461,33 +461,73 @@
                   <p class="mt-2 text-xs">Check our live calendar to see availability.</p>
                 </div>
 
-                <!-- Time Slot (fixed 1 hour) -->
+                <!-- Duration -->
                 <div>
-                  <label for="timeSlot" class="mb-1 block text-xs font-semibold text-gray-700">Time Slot (1 hour)</label>
+                  <label for="duration" class="mb-1 block text-xs font-semibold text-gray-700">Duration</label>
                   <select
-                    id="timeSlot"
-                    name="timeSlot"
+                    id="duration"
+                    name="duration"
                     class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-orange-400"
                     required
                   >
-                    <option value="">Select time slot</option>
-                    <option value="09:00-10:00">9:00 AM - 10:00 AM</option>
-                    <option value="10:00-11:00">10:00 AM - 11:00 AM</option>
-                    <option value="11:00-12:00">11:00 AM - 12:00 PM</option>
-                    <option value="12:00-13:00">12:00 PM - 1:00 PM</option>
-                    <option value="13:00-14:00">1:00 PM - 2:00 PM</option>
-                    <option value="14:00-15:00">2:00 PM - 3:00 PM</option>
-                    <option value="15:00-16:00">3:00 PM - 4:00 PM</option>
-                    <option value="16:00-17:00">4:00 PM - 5:00 PM</option>
-                    <option value="17:00-18:00">5:00 PM - 6:00 PM</option>
-                    <option value="18:00-19:00">6:00 PM - 7:00 PM</option>
-                    <option value="19:00-20:00">7:00 PM - 8:00 PM</option>
-                    <option value="20:00-21:00">8:00 PM - 9:00 PM</option>
-                    <option value="21:00-22:00">9:00 PM - 10:00 PM</option>
-                    <option value="22:00-23:00">10:00 PM - 11:00 PM</option>
+                    <option value="">Select duration</option>
+                    <option value="1">1 hour</option>
+                    <option value="2">2 hours</option>
+                    <option value="3">3 hours</option>
+                    <option value="4">4 hours</option>
+                    <option value="5">5 hours</option>
+                    <option value="6">6 hours</option>
+                    <option value="7">7 hours</option>
                   </select>
                 </div>
                 <p id="timeError" class="hidden text-xs text-red-600" aria-live="polite"></p>
+
+                <!-- Time inputs in grid -->
+                <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
+                  <!-- Start Time (hour-only select) -->
+                  <div>
+                    <label for="startTime" class="mb-1 block text-xs font-semibold text-gray-700">Start Time</label>
+                    <select
+                      id="startTime"
+                      name="startTime"
+                      class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-orange-400"
+                      required
+                    >
+                      <option value="">Select start time</option>
+                      <option value="09:00">9 AM</option>
+                      <option value="10:00">10 AM</option>
+                      <option value="11:00">11 AM</option>
+                      <option value="12:00">12 PM</option>
+                      <option value="13:00">1 PM</option>
+                      <option value="14:00">2 PM</option>
+                      <option value="15:00">3 PM</option>
+                      <option value="16:00">4 PM</option>
+                      <option value="17:00">5 PM</option>
+                      <option value="18:00">6 PM</option>
+                      <option value="19:00">7 PM</option>
+                      <option value="20:00">8 PM</option>
+                      <option value="21:00">9 PM</option>
+                      <option value="22:00">10 PM</option>
+                      <option value="23:00">11 PM</option>
+                    </select>
+                    <p class="mt-1 text-xs text-gray-500">Gym opens at 9:00 AM</p>
+                  </div>
+
+                  <!-- End Time (auto-filled, read-only) -->
+                  <div>
+                    <label for="endTime" class="mb-1 block text-xs font-semibold text-gray-700">End Time</label>
+                    <input
+                      id="endTime"
+                      name="endTime"
+                      type="time"
+                      min="09:00"
+                      max="23:59"
+                      class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-orange-400"
+                      disabled
+                    />
+                    <p class="mt-1 text-xs text-gray-500">Last session ends at 12:00 AM</p>
+                  </div>
+                </div>
 
                 <!-- Select Date -->
                 <div>
