--- a/src/html/admin_header.html
+++ b/src/html/admin_header.html
@@ -1,22 +1,22 @@
 <!-- do not modify -jest -->
-<div class="section-h from-${mainColor}-700 to-${subColor}-600 overflow-hidden p-4 2xl:p-8">
+<div class="section-h from-${mainColor}-700 to-${subColor}-600 overflow-hidden p-4">
   <div class="section-h2">
     <div class="section-h2-h">
       <img src="/src/images/client_logo.jpg" />
     </div>
     <div class="flex flex-col">
-      <p class="text-lg xl:text-xl 2xl:text-2xl">${title}</p>
-      <p class="text-xs text-white/80 xl:text-sm 2xl:text-base">${subtitle}</p>
+      <p class="text-lg">${title}</p>
+      <p class="text-xs text-white/80">${subtitle}</p>
     </div>
   </div>
   <div class="section-h-c bg-${mainColor}-500">
     <div
-      class="text-${mainColor}-300 w-[235px] text-center text-xs font-bold xl:text-sm 2xl:w-[302px] 2xl:text-base"
+      class="text-${mainColor}-300 w-[235px] text-center text-xs font-bold"
     >
       ${middletext}
     </div>
   </div>
-  <div class="z-10 flex gap-2 2xl:gap-4">
+  <div class="z-10 flex gap-2">
     <button
       data-section="${sectionName}"
       class="section-main-btn text-${btnColor}-500 hover:bg-${btnColor}-500 hover:shadow-${btnColor}-700 active:bg-${btnColor}-600 active:translate-y-1 active:scale-95 active:shadow-none"
