--- a/src/html/custom/dashboard_content.html
+++ b/src/html/custom/dashboard_content.html
@@ -1,7 +1,7 @@
-<!-- do not remove class="h-[530px]" and class="h-[500px] pt-4" -jest -->
-<div data-sectionindex="1" data-tabindex="1" class="h-[530px]">
+<!-- do not remove class="h-[500px] pt-4" -jest -->
+<div data-sectionindex="1" data-tabindex="1">
   <canvas id="dashboardChart1"></canvas>
 </div>
-<div data-sectionindex="2" class="h-[500px] pt-4">
+<div data-sectionindex="2" class="h-[600px] pt-4">
   <canvas id="dashboardChart2"></canvas>
 </div>
