--- a/src/html/custom/ecommerce_cart_content.html
+++ b/src/html/custom/ecommerce_cart_content.html
@@ -1,5 +1,5 @@
-<!-- do not remove class="h-[530px]" and class="h-[500px] pt-4" -jest -->
-<div data-sectionindex="1" data-tabindex="1" class="h-[530px]">
+<!-- do not remove class="h-[500px] pt-4" -jest -->
+<div data-sectionindex="1" data-tabindex="1">
   <div
     id="ecommerceCartTab1Empty"
     class="h-full content-center text-center text-xs font-bold text-gray-400"
