--- a/src/html/custom/inquiry_reservations_content.html
+++ b/src/html/custom/inquiry_reservations_content.html
@@ -1,5 +1,5 @@
-<!-- do not remove class="h-[530px]" and class="h-[500px] pt-4" -jest -->
-<div data-sectionindex="1" data-tabindex="1" class="h-[530px]">
+<!-- do not remove class="h-[500px] pt-4" -jest -->
+<div data-sectionindex="1" data-tabindex="1">
   <div id="calendar" class="flex h-full flex-col rounded-t-lg bg-white shadow-lg">
     <div class="flex items-center justify-between border-b p-1">
       <button id="prevMonth" class="rounded-lg p-2 transition-colors hover:bg-gray-100">
