--- a/src/html/custom/settings_content.html
+++ b/src/html/custom/settings_content.html
@@ -1,4 +1,4 @@
-<div data-sectionindex="1" data-tabindex="1" class="h-[530px]">
+<div data-sectionindex="1" data-tabindex="1">
   <div class="flex h-full flex-col rounded-t-lg bg-white shadow-lg">
     <div id="settingsPreferencesContent" class="p-2 w-full"></div>
   </div>
