--- a/src/html/admin_stats.html
+++ b/src/html/admin_stats.html
@@ -3,13 +3,13 @@
   <div
     id="${sectionName}SectionStats"
     data-section="${sectionName}"
-    class="section-stats-base border-${mainColor}-500 hidden min-h-[86px] p-3 xl:min-h-[108px] xl:p-4"
+    class="section-stats-base border-${mainColor}-500 hidden min-h-[86px] p-3"
   >
     <div title="See breakdown" class="section-stats-f emoji">
       <img src="/src/images/🧾.png" class="inline h-5 w-5" />
     </div>
-    <p class="section-stats-h mb-2 text-sm xl:mb-3 xl:text-base"></p>
-    <p class="bottom-0 mt-4 hidden text-xs lg:absolute lg:mb-5 xl:text-sm">(Click to show)</p>
-    <p class="section-stats-c text-2xl xl:text-3xl">0</p>
+    <p class="section-stats-h mb-2 text-sm"></p>
+    <p class="bottom-0 mt-4 hidden text-xs lg:absolute lg:mb-5">(Click to show)</p>
+    <p class="section-stats-c text-2xl">0</p>
   </div>
 </div>
