--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -173,8 +173,8 @@
         <div
           id="section-content"
           data-sectioncount="2"
-          data-tabtitles="Active Monthly Customer Growth::Nearly expiring monthly pass"
-          data-subtitles="Monthly customer growth tracker::[count]"
+          data-tabtitles="Active Monthly Customer Growth::Nearly Expiring Monthly Passes"
+          data-subtitles="Monthly customer growth tracker::Monthly customer expiries"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="0"
           data-listemptytexts="::<p class='text-sm'>No nearly expiring monthly pass yet</p><p>Range: Two weeks notice</p>"
@@ -313,7 +313,7 @@
         <div
           id="section-content"
           data-sectioncount="2"
-          data-tabtitles="All Available Products::Best Selling Products::Least Selling Products"
+          data-tabtitles="All Available Products::Best Selling::Least Selling"
           data-subtitles="Products with stocks::Fast moving products::Slow moving products"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="0"
