--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -110,7 +110,7 @@
     </aside>
 
     <!-- main workspace -->
-    <div class="ml-48 min-h-screen p-4">
+    <div class="ml-48 min-h-screen p-1">
       <!--
 
       📌 parent:
@@ -313,8 +313,8 @@
         <div
           id="section-content"
           data-sectioncount="2"
-          data-tabtitles="All Available Products::Best Selling::Least Selling"
-          data-subtitles="Products with stocks::Fast moving products::Slow moving products"
+          data-tabtitles="All Available::Best Selling::Least Selling"
+          data-subtitles="Products::Products::Products"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="0"
           data-sectiontwotitletexts="Cart::List of items added to cart"
@@ -367,15 +367,15 @@
         <div
           id="section-stats"
           data-toggles="0::0::0::0::0::0"
-          data-startingtexts="::::Avg::Avg::Avg::Avg"
-          data-highlighttexts="Today's::Today's::Overall::Daily::Weekly::Monthly"
-          data-endingtexts="Cash Sales::Cashless Sales::Total::Sales::Sales::Sales"
+          data-startingtexts="Today's::Today's::Today's::Avg::Avg::Avg"
+          data-highlighttexts="Cash::Cashless::Overall::Daily::Weekly::Monthly"
+          data-endingtexts="Income::Income::Income::Income::Income::Income"
           data-types="cash sales today::cashless sales today::overall total sales::average daily sales::average weekly sales::average monthly sales"
         ></div>
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="Pending::Canceled::Service::Service::Service::Sales::Sales::Sales"
+          data-tabtitles="Pending::Canceled::Services::Services::Services::Product Sales::Product Sales::Product Sales"
           data-subtitles="Transactions::Transactions::All::Cash::Cashless + Hybrid::All::Cash::Cashless + Hybrid"
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="No pending transactions yet::No canceled transactions yet::No service transactions yet::No cash service transactions yet::No cashless service transactions yet::No sales transactions yet::No cash sales transactions yet::No cashless sales transactions yet"
