--- a/src/html/admin_content.html
+++ b/src/html/admin_content.html
@@ -2,14 +2,14 @@
 <div id="${sectionName}SectionContent" class="grid grid-cols-1 gap-1 2xl:grid-cols-12">
   <div class="col-span-1 flex flex-col 2xl:col-span-8">
     <div class="section-content border-${mainColor}-500">
-      <div class="section-content-h h-[80px]">
+      <div class="section-content-h h-[70px]">
         <div class="section-content-h2">
           <button
             id="${sectionName}_tab"
-            class="section-content-tab hidden min-w-[150px] bg-gray-200 hover:bg-gray-300"
+            class="section-content-tab hidden min-w-[125px] bg-gray-200 hover:bg-gray-300"
           >
-            <p class="mb-5 text-sm 2xl:mb-6"></p>
-            <div class="absolute inset-0 mt-5 content-center 2xl:mt-6">
+            <p class="mb-5 text-sm"></p>
+            <div class="absolute inset-0 mt-5 content-center">
               <p class="text-xs text-gray-500"></p>
               <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
             </div>
@@ -47,7 +47,7 @@
           </button>
         </div>
       </div>
-      <div class="scrollbar-light p-2"></div>
+      <div class="scrollbar-light p-1"></div>
     </div>
   </div>
   <div class="col-span-1 flex hidden flex-col 2xl:col-span-4">
