--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
         <div
           id="equipment-container"
-          class="scrollbar-dark grid gap-6 p-2 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
+          class="grid gap-6 p-2 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
         ></div>
       </section>
     </div>
