--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -10,6 +10,48 @@
     <title>Fitworx Gym - Dashboard</title>
 
     <!-- main css -->
+    <style>
+      /* custom scrollbar - light and dark */
+
+      .scrollbar-light,
+      .scrollbar-dark {
+        overflow-y: auto;
+      }
+
+      .scrollbar-light::-webkit-scrollbar,
+      .scrollbar-dark::-webkit-scrollbar {
+        width: 6px;
+      }
+
+      .scrollbar-light::-webkit-scrollbar-track {
+        background: #f3f4f6;
+      }
+
+      .scrollbar-dark::-webkit-scrollbar-track {
+        background: #374151;
+      }
+
+      .scrollbar-light::-webkit-scrollbar-thumb,
+      .scrollbar-dark::-webkit-scrollbar-thumb {
+        border-radius: 3px;
+      }
+
+      .scrollbar-light::-webkit-scrollbar-thumb {
+        background: #d1d5db;
+      }
+
+      .scrollbar-dark::-webkit-scrollbar-thumb {
+        background: #6b7280;
+      }
+
+      .scrollbar-light::-webkit-scrollbar-thumb:hover {
+        background: #9ca3af;
+      }
+
+      .scrollbar-dark::-webkit-scrollbar-thumb:hover {
+        background: #9ca3af;
+      }
+    </style>
     <!-- add new css here 👆 -->
 
     <!-- icons -->
@@ -453,7 +495,9 @@
                 <!-- Quick Booking Tip -->
                 <div class="rounded-md border border-orange-200 bg-orange-50 p-3 text-xs text-orange-900">
                   <p class="mb-1 font-semibold">Quick Reservation Tip!</p>
-                  <p class="mb-2">Reservations are now in fixed 1-hour blocks. Choose a time slot that works for you.</p>
+                  <p class="mb-2">
+                    Reservations are now in fixed 1-hour blocks. Choose a time slot that works for you.
+                  </p>
                   <ul class="list-disc space-y-1 pl-4 text-xs">
                     <li>Operating hours: 9:00 AM – 11:59 PM</li>
                     <li>Each booking reserves a 1-hour slot (e.g., 10:00–11:00)</li>
@@ -574,31 +618,40 @@
     <!-- Equipment Status (inserted before footer) -->
     <div class="relative">
       <div class="absolute inset-0 bg-orange-50 opacity-100 transition-opacity duration-300 dark:opacity-0"></div>
-      <div class="bg-gray-900 absolute inset-0 opacity-0 transition-opacity duration-300 dark:opacity-100"></div>
+      <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 dark:opacity-100"></div>
       <section class="relative z-10 w-full px-6 py-12 sm:px-8 lg:px-12 xl:px-16">
-
-        <h2 class="mb-8 bg-gradient-to-r from-orange-500 to-orange-600 bg-clip-text text-center text-3xl font-black text-transparent">
+        <h2
+          class="mb-8 bg-gradient-to-r from-orange-500 to-orange-600 bg-clip-text text-center text-3xl font-black text-transparent"
+        >
           Equipment Status
         </h2>
 
         <div id="equipment-filters" class="mb-6 flex flex-wrap items-center justify-center gap-3">
-          <button type="button" data-filter="all"
-            class="px-4 py-2 text-sm font-medium rounded-lg border-2 border-orange-500 bg-orange-600 text-white hover:bg-orange-700 transition-colors shadow-sm">
+          <button
+            type="button"
+            data-filter="all"
+            class="rounded-lg border-2 border-orange-500 bg-orange-600 px-4 py-2 text-sm font-medium text-white shadow-sm transition-colors hover:bg-orange-700"
+          >
             All
           </button>
-          <button type="button" data-filter="machine"
-            class="px-4 py-2 text-sm font-medium rounded-lg border-2 border-orange-500 bg-white text-orange-600 hover:bg-orange-50 transition-colors shadow-sm">
+          <button
+            type="button"
+            data-filter="machine"
+            class="rounded-lg border-2 border-orange-500 bg-white px-4 py-2 text-sm font-medium text-orange-600 shadow-sm transition-colors hover:bg-orange-50"
+          >
             Machine
           </button>
-          <button type="button" data-filter="non-machine"
-            class="px-4 py-2 text-sm font-medium rounded-lg border-2 border-orange-500 bg-white text-orange-600 hover:bg-orange-50 transition-colors shadow-sm">
+          <button
+            type="button"
+            data-filter="non-machine"
+            class="rounded-lg border-2 border-orange-500 bg-white px-4 py-2 text-sm font-medium text-orange-600 shadow-sm transition-colors hover:bg-orange-50"
+          >
             Non-Machine
           </button>
         </div>
 
         <div id="equipment-container" class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"></div>
       </section>
-
     </div>
 
     <!-- 🔥 footer 🔥 -->
@@ -867,10 +920,9 @@
         }
 
         // React to open/close buttons
-        const openBtns = [
-          document.getElementById('openNotif'),
-          document.getElementById('openNotifMobile'),
-        ].filter(Boolean);
+        const openBtns = [document.getElementById('openNotif'), document.getElementById('openNotifMobile')].filter(
+          Boolean
+        );
         openBtns.forEach((btn) => btn.addEventListener('click', () => setTimeout(applyPadding, 50)));
         const closeBtn = document.getElementById('closeNotif');
         if (closeBtn) closeBtn.addEventListener('click', () => setTimeout(applyPadding, 50));
