feat: customers module - admin side, filter for all (4) tabs

--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -177,7 +177,7 @@
           data-subtitles="Monthly customer growth tracker::Monthly customer expiries"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="0"
-          data-listemptytexts="::<p class='text-sm'>No nearly expiring monthly pass yet</p><p>Range: Two weeks notice</p>"
+          data-listemptytexts="::<p class='text-sm'>No nearly expiring monthly pass yet</p><p>This table has two weeks notice range</p>"
           data-listtitletexts="[]::[Customer ID//Customer//Expires After]"
           data-listdatasortby="[]::[name//name//date]"
           data-listitembtnids="[]::[renewBtn]"
