--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -87,7 +87,7 @@
 
     <!-- 🔥 header 🔥 -->
     <nav class="absolute sticky left-0 top-0 z-50 border-b-4 border-orange-600 bg-orange-700 text-white">
-      <div class="mx-auto flex h-16 max-w-7xl items-center justify-between px-4">
+      <div class="mx-auto flex h-16 max-w-7xl items-center justify-between px-6 md:px-8">
         <!-- branding -->
         <header class="flex items-center space-x-4">
           <div class="flex items-center space-x-4">
@@ -197,9 +197,10 @@
           <div class="ml-6">
             <button
               id="openNotif"
-              class="inline-flex items-center rounded-full bg-white px-3 py-2 text-xs font-medium text-orange-600 transition-all hover:bg-orange-50 focus:ring-2 focus:ring-orange-100"
+              class="relative inline-flex items-center rounded-full bg-white px-3 py-2 text-xs font-medium text-orange-600 transition-all hover:bg-orange-50 focus:ring-2 focus:ring-orange-100"
             >
               🔔 Notifications
+              <span id="notifDot" class="absolute -right-1 -top-1 hidden h-2 w-2 rounded-full bg-green-500 ring-2 ring-white"></span>
             </button>
             <button
               id="logout"
@@ -279,9 +280,10 @@
           <div class="flex justify-between">
             <button
               id="openNotifMobile"
-              class="inline-flex items-center rounded-full bg-white px-3 py-2 text-sm font-medium text-orange-600 transition-all hover:bg-orange-50 focus:ring-2 focus:ring-orange-100"
+              class="relative inline-flex items-center rounded-full bg-white px-3 py-2 text-sm font-medium text-orange-600 transition-all hover:bg-orange-50 focus:ring-2 focus:ring-orange-100"
             >
               Notifications
+              <span id="notifDotMobile" class="absolute -right-1 -top-1 hidden h-2 w-2 rounded-full bg-green-500 ring-2 ring-white"></span>
             </button>
             <button
               id="logoutMobile"
@@ -426,28 +428,28 @@
 
       <!-- Calendar and Quick Info Container -->
 
-      <!-- Notification Panel -->
+      <!-- Notification Dropdown -->
       <div
         id="notificationPanel"
-        class="fixed right-0 top-16 z-40 h-full w-80 translate-x-0 translate-x-full transform border-l border-orange-300 bg-white/70 shadow-2xl backdrop-blur-md transition-transform duration-500 ease-in-out"
+        class="fixed top-20 z-[60] hidden w-full max-w-sm overflow-hidden rounded-xl border border-gray-200 bg-white shadow-xl left-3 right-3 md:left-auto md:right-6 md:w-96 md:max-w-none transform transition-all duration-200 ease-out opacity-0 -translate-y-2 scale-95"
       >
-        <div class="flex items-center justify-between border-b border-orange-200 bg-orange-100 p-3">
-          <h2 class="flex items-center gap-2 font-semibold text-orange-700">
+        <div class="flex items-center justify-between border-b border-gray-200 bg-white p-4">
+          <h2 class="flex items-center gap-2 font-semibold text-gray-800">
             📢 Notifications
-            <span id="notifCount" class="rounded-full bg-orange-200 px-2 py-0.5 text-xs text-orange-700">0</span>
+            <span id="notifCount" class="rounded-full bg-orange-100 px-2 py-0.5 text-xs text-orange-700">0</span>
           </h2>
           <button
             id="closeNotif"
-            class="rounded-full bg-orange-200 px-2 py-1 text-sm text-orange-700 transition hover:bg-orange-300"
+            class="rounded-full bg-gray-100 px-2 py-1 text-sm text-gray-700 transition hover:bg-gray-200"
             aria-label="Close Notifications"
           >
             ✖
           </button>
         </div>
 
-        <div class="h-[calc(100%-3rem)] overflow-y-auto p-3">
-          <ul id="notifList" class="space-y-2 text-sm text-gray-700">
-            <li class="hidden border-b border-orange-100 pb-2">
+        <div class="max-h-[60vh] overflow-y-auto p-4 md:max-h-80">
+          <ul id="notifList" class="space-y-3 text-sm text-gray-700">
+            <li class="hidden border-b border-gray-100 pb-3">
               <b>Title</b>
               <p class="text-xs text-gray-500">Some first part of the message...</p>
             </li>
@@ -903,38 +905,8 @@
     <!-- scripts -->
     <script type="module" src="/src/js/_global.js"></script>
     <script type="module" src="/src/js/landing_modules/equipment-loader.js"></script>
-    <script>
-      (function () {
-        const panel = document.getElementById('notificationPanel');
-        const main = document.getElementById('dashboardMain');
-        if (!panel || !main) return;
-
-        function applyPadding() {
-          const isOpen = !panel.classList.contains('translate-x-full');
-          if (isOpen) {
-            const isLarge = window.innerWidth >= 1024; // lg breakpoint
-            main.style.paddingRight = isLarge ? '20rem' : '0'; // w-80 = 20rem
-          } else {
-            main.style.paddingRight = '0';
-          }
-        }
-
-        // React to open/close buttons
-        const openBtns = [document.getElementById('openNotif'), document.getElementById('openNotifMobile')].filter(
-          Boolean
-        );
-        openBtns.forEach((btn) => btn.addEventListener('click', () => setTimeout(applyPadding, 50)));
-        const closeBtn = document.getElementById('closeNotif');
-        if (closeBtn) closeBtn.addEventListener('click', () => setTimeout(applyPadding, 50));
-
-        // Observe class changes on the panel (in case other scripts toggle it)
-        const mo = new MutationObserver(applyPadding);
-        mo.observe(panel, { attributes: true, attributeFilter: ['class'] });
-
-        window.addEventListener('resize', applyPadding, { passive: true });
-        // Initial
-        applyPadding();
-      })();
-    </script>
+    <!-- notification sound -->
+    <audio id="notifSfx" src="/src/sfx/success.mp3" preload="auto"></audio>
+    
   </body>
 </html>
