--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             Unleash your potential at Fitworx Gym! Our cutting-edge facilities, expert trainers, and dynamic classes are
             designed to make every workout an exciting adventure.
           </p>
-          <div class="flex flex-col gap-4 lg:grid lg:grid-cols-2">
+          <div class="flex flex-col gap-4 pr-32 lg:grid lg:grid-cols-2">
             <a
               href="/login"
               class="group flex transform items-center justify-center gap-2 rounded-xl bg-white px-8 py-4 text-lg font-bold text-orange-600 transition-all duration-300 hover:scale-105 hover:bg-orange-50 hover:shadow-2xl"
@@ -357,7 +357,7 @@
       <div class="absolute inset-0 bg-orange-100 opacity-100 transition-opacity duration-300 dark:opacity-0"></div>
       <div class="bg-dark-900 absolute inset-0 opacity-0 transition-opacity duration-300 dark:opacity-100"></div>
       <section id="equipmentStatus" class="container relative z-10 mx-auto px-4 py-16">
-        <h3 class="text-center mb-6 text-5xl font-black leading-tight text-gray-900 lg:text-6xl dark:text-white">
+        <h3 class="mb-6 text-center text-5xl font-black leading-tight text-gray-900 lg:text-6xl dark:text-white">
           <span
             class="bg-gradient-to-r from-orange-600 to-red-600 bg-clip-text text-transparent drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)] dark:drop-shadow-[0_1.2px_1.2px_rgba(255,0,0,0.8)]"
           >
@@ -389,10 +389,7 @@
           </button>
         </div>
 
-        <div
-          id="equipment-container"
-          class="grid gap-6 p-2 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
-        ></div>
+        <div id="equipment-container" class="grid gap-6 p-2 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"></div>
       </section>
     </div>
 
