--- a/src/html/login/index.html
+++ b/src/html/login/index.html
@@ -140,7 +140,7 @@
                 <i class="fas fa-user-circle text-5xl text-white"></i>
               </div>
               <h3 class="mb-4 text-3xl font-bold text-white sm:text-4xl lg:text-5xl" id="formTitle">
-                Sign in to an Account
+                Sign In
               </h3>
               <p class="text-lg text-gray-400 sm:text-xl" id="formSubtitle">
                 <!-- 🔑 CLIENT -->
@@ -256,7 +256,7 @@
               </div>
             </form>
 
-            <div class="mt-4 text-center lg:mt-6">
+            <!-- <div class="mt-4 text-center lg:mt-6">
               <div class="mb-4 flex items-center justify-center space-x-4">
                 <div class="h-px flex-1 bg-gray-600"></div>
                 <span class="text-sm text-gray-400">OR</span>
@@ -275,7 +275,7 @@
                   ></span>
                 </a>
               </p>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
