fix: overall total sales payment module order

--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -368,9 +368,9 @@
           id="section-stats"
           data-toggles="0::0::0::0::0::0"
           data-startingtexts="Today's::Today's::Today's::Avg::Avg::Avg"
-          data-highlighttexts="Cash::Cashless::Overall::Daily::Weekly::Monthly"
+          data-highlighttexts="Overall::Cash::Cashless::Daily::Weekly::Monthly"
           data-endingtexts="Income::Income::Income::Income::Income::Income"
-          data-types="cash sales today::cashless sales today::overall total sales::average daily sales::average weekly sales::average monthly sales"
+          data-types="overall total sales::cash sales today::cashless sales today::average daily sales::average weekly sales::average monthly sales"
         ></div>
         <div
           id="section-content"
