fix: update visual bugs, data control supplements tab, payment modal text. feat:default password modal for customer

--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -443,8 +443,8 @@
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="0"
           data-listemptytexts="No monthly registrants found::No check-ins found::No products found::No reservations found"
-          data-listtitletexts="[Customer ID//Customer Name//Type//Status//Start Date//End Date//Price Rate//Amount]::[ID//Type//Client Name//Log Date & Time//Price Rate//Amount]::[Product ID//Product Name//Quantity//Price//Measurement//Measurement Unit//Expiration Date//Date]::[Reservation ID//Service Type//Customer Name//Start Time//End Time//Reservation Date//Price]"
-          data-listdatasortby="[name//name//name//name//date//date//name//number]::[name//name//name//date//name//number]::[name//name//number//number//number//name//date//date]::[name//name//name//date//date//number//number]"
+          data-listtitletexts="[Customer ID//Customer Name//Type//Status//Start Date//End Date//Price Rate//Amount]::[ID//Type//Client Name//Log Date & Time//Price Rate//Amount]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Category//Expiration Date//Date]::[Reservation ID//Service Type//Customer Name//Start Time//End Time//Reservation Date//Price]"
+          data-listdatasortby="[name//name//name//name//date//date//name//number]::[name//name//name//date//name//number]::[name//name//number//number//name//number//name//name//date//date]::[name//name//name//date//date//number//number]"
           data-listitembtnids="[]::[]::[]::[]"
           data-listitembtntexts="[]::[]::[]::[]"
           data-listitembtncolors="[]::[]::[]::[]"
