--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -164,11 +164,11 @@
         ></div>
         <div
           id="section-stats"
-          data-toggles="0::0::0::0::0::0"
-          data-startingtexts="::::::::Active Monthly::Active"
-          data-highlighttexts="Overall Total::Gym::Reservation::Product::Customers::Reservations"
-          data-endingtexts="Sales::Revenue::Revenue::Sales::::"
-          data-types="overall total sales::gym revenue::reservation revenue::product sales::active monthly customers::active reservations"
+          data-toggles="0::0::0::0::0::0::0"
+          data-startingtexts="::::::::Active Monthly::Active::Nearly Expiring"
+          data-highlighttexts="Overall Total::Gym::Reservation::Product::Customers::Reservations::Passes"
+          data-endingtexts="Sales::Revenue::Revenue::Sales::::::"
+          data-types="overall total sales::gym revenue::reservation revenue::product sales::active monthly customers::active reservations::nearly expiring monthly passes"
         ></div>
         <div
           id="section-content"
